==> hazy1k/STM32HAL-Study-Notes/3.参考例程/11.电容触摸按键实验/HARDWARE/TPAD/tpad.c <==
#include "tpad.h"
#include "delay.h"
#include "usart.h"

TIM_HandleTypeDef TIM2_Handler; // 定时器2句柄 

#define TPAD_ARR_MAX_VAL 0XFFFFFFFF // 最大的ARR值(TIM2是32位定时器)	  
vu16 tpad_default_val = 0;			// 空载的时候(没有手按下),计数器需要的时间

// 初始化触摸按键
// 获得空载的时候触摸按键的取值.
// psc:分频系数,越小,灵敏度越高.
// 返回值:0,初始化成功;1,初始化失败
u8 TPAD_Init(u8 psc)
{
	u16 buf[10]; // 10个数据进行排序
	u16 temp; // 临时变量
	u8 j,i; // 循环变量
	TIM2_CH1_Cap_Init(TPAD_ARR_MAX_VAL, psc-1); // 设置分频系数
	for(i = 0; i < 10; i++) // 连续读取10次
	{				 
		buf[i] = TPAD_Get_Val(); // 读取一次值
		delay_ms(10);	    
	}				    
	for(i = 0; i < 9; i++)//排序
	{
		for(j = i+1; j < 10; j++)
		{
			if(buf[i] > buf[j]) // 升序排列
			{
				temp = buf[i];
				buf[i] = buf[j];
				buf[j] = temp;
			}
		}
	}
	temp = 0;
	for(i=2;i<8;i++)temp+=buf[i];//取中间的8个数据进行平均
	tpad_default_val=temp/6;
	printf("tpad_default_val:%d\r\n",tpad_default_val);	
	if(tpad_default_val>(vu16)TPAD_ARR_MAX_VAL/2)return 1;//初始化遇到超过TPAD_ARR_MAX_VAL/2的数值,不正常!
	return 0;		     	    					   
}

// 复位一次
// 释放电容电量，并清除定时器的计数值
void TPAD_Reset(void)
{
    GPIO_InitTypeDef GPIO_Initure;
	
    GPIO_Initure.Pin = GPIO_PIN_5;           // PA5
    GPIO_Initure.Mode = GPIO_MODE_OUTPUT_PP; // 推挽输出
    GPIO_Initure.Pull = GPIO_PULLDOWN;       // 下拉
    GPIO_Initure.Speed = GPIO_SPEED_HIGH;    // 高速
    HAL_GPIO_Init(GPIOA,&GPIO_Initure);
    HAL_GPIO_WritePin(GPIOA,GPIO_PIN_5,GPIO_PIN_RESET);	// PA5输出0，放电
    delay_ms(5);
    __HAL_TIM_CLEAR_FLAG(&TIM2_Handler,TIM_FLAG_CC1|TIM_FLAG_UPDATE); // 清除标志位
    __HAL_TIM_SET_COUNTER(&TIM2_Handler,0); // 计数器值归0
    
    GPIO_Initure.Mode = GPIO_MODE_AF_PP;     // 推挽复用
    GPIO_Initure.Pull = GPIO_NOPULL;         // 不带上下拉
    GPIO_Initure.Alternate = GPIO_AF1_TIM2;  // PA5复用为TIM2通道1
    HAL_GPIO_Init(GPIOA,&GPIO_Initure);         
}

// 得到定时器捕获值
// 如果超时,则直接返回定时器的计数值.
// 返回值：捕获值/计数值（超时的情况下返回）
u16 TPAD_Get_Val(void)
{
    TPAD_Reset();
    while(__HAL_TIM_GET_FLAG(&TIM2_Handler,TIM_FLAG_CC1) == RESET) //等待捕获上升沿
    {
        if(__HAL_TIM_GET_COUNTER(&TIM2_Handler) > TPAD_ARR_MAX_VAL-500) 
			return __HAL_TIM_GET_COUNTER(&TIM2_Handler); // 超时了，直接返回CNT的值
    };
    return HAL_TIM_ReadCapturedValue(&TIM2_Handler, TIM_CHANNEL_1); // 读取捕获值
}

// 读取n次,取最大值
// n：连续获取的次数
// 返回值：n次读数里面读到的最大读数值
u16 TPAD_Get_MaxVal(u8 n)
{ 
	u16 temp = 0; 
	u16 res = 0; 
	u8 lcntnum = n*2/3; // 至少2/3*n的有效个触摸,才算有效
	u8 okcnt = 0;
	while(n--)
	{
		temp = TPAD_Get_Val(); // 得到一次值
		if(temp > (tpad_default_val*5/4))
			okcnt++; // 至少大于默认值的5/4才算有效
		if(temp > res)
			res = temp;
	}
	if(okcnt >= lcntnum)
		return res; // 至少2/3的概率,要大于默认值的5/4才算有效
	else 
		return 0;
}  

// 扫描触摸按键
// mode:0,不支持连续触发(按下一次必须松开才能按下一次);1,支持连续触发(可以一直按下)
// 返回值:0,没有按下;1,有按下;										  
u8 TPAD_Scan(u8 mode)
{
	static u8 keyen = 0; // 0,可以开始检测;>0,还不能开始检测	 
	u8 res = 0;
	u8 sample = 3; // 默认采样次数为3次	 
	u16 rval;
	if(mode)
	{
		sample = 6;	// 支持连按的时候，设置采样次数为6次
		keyen = 0;	// 支持连按	  
	}
	rval = TPAD_Get_MaxVal(sample); // 采样n次 
	if(rval>(tpad_default_val*4/3)&&rval<(10*tpad_default_val)) // 大于tpad_default_val+(1/3)*tpad_default_val,且小于10倍tpad_default_val,则有效
	{							 
		if(keyen==0)
			res = 1; // keyen==0,有效 
		//printf("r:%d\r\n",rval);		     	    					   
		keyen = 3; // 至少要再过3次之后才能按键有效   
	} 
	if(keyen)
		keyen--; // 计数器减1		   							   		     	    					   
	return res;
}	

// 定时器2通道1输入捕获配置
// arr：自动重装值(TIM2是32位的!!)
// psc：时钟预分频数
void TIM2_CH1_Cap_Init(u32 arr,u16 psc)
{  
    TIM_IC_InitTypeDef TIM2_CH1Config;  
    
    TIM2_Handler.Instance = TIM2;                        // 通用定时器2
    TIM2_Handler.Init.Prescaler = psc;                   // 分频
    TIM2_Handler.Init.CounterMode = TIM_COUNTERMODE_UP;  // 向上计数器
    TIM2_Handler.Init.Period = arr;                      // 自动装载值
    TIM2_Handler.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
    HAL_TIM_IC_Init(&TIM2_Handler);
    
    TIM2_CH1Config.ICPolarity = TIM_ICPOLARITY_RISING;    // 上升沿捕获
    TIM2_CH1Config.ICSelection = TIM_ICSELECTION_DIRECTTI;// 映射到TI1上
    TIM2_CH1Config.ICPrescaler = TIM_ICPSC_DIV1;          // 配置输入分频，不分频
    TIM2_CH1Config.ICFilter = 0;                          // 配置输入滤波器，不滤波
    HAL_TIM_IC_ConfigChannel(&TIM2_Handler,&TIM2_CH1Config,TIM_CHANNEL_1); // 配置TIM2通道1
    HAL_TIM_IC_Start(&TIM2_Handler,TIM_CHANNEL_1);        // 开始捕获TIM2的通道1
}

// 定时器2底层驱动，时钟使能，引脚配置
// 此函数会被HAL_TIM_IC_Init()调用
// htim:定时器2句柄
void HAL_TIM_IC_MspInit(TIM_HandleTypeDef *htim)
{
    GPIO_InitTypeDef GPIO_Initure;
    __HAL_RCC_TIM2_CLK_ENABLE();        // 使能TIM2时钟
    __HAL_RCC_GPIOA_CLK_ENABLE();	    // 开启GPIOA时钟
	
    GPIO_Initure.Pin=GPIO_PIN_5;         // PA5
    GPIO_Initure.Mode=GPIO_MODE_AF_PP;   // 推挽复用
    GPIO_Initure.Pull=GPIO_NOPULL;       // 不带上下拉
    GPIO_Initure.Speed=GPIO_SPEED_HIGH;  // 高速
    GPIO_Initure.Alternate=GPIO_AF1_TIM2;// PA5复用为TIM2通道1
    HAL_GPIO_Init(GPIOA,&GPIO_Initure);
}
